tests/fixtures/valid/multi/module_import_fn/src/lib/main.gcl
// Module import: values from lib
import lib.lib;

const node two: Dimensionless = 2.0;
param x: Dimensionless = 21.0;

node y: Dimensionless = @x * @two;
