tests/fixtures/errors/assert_not_bool.gcl
// Error: assert body must evaluate to Bool
param x: Dimensionless = 1.0;
assert check = @x + 1.0;
